--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,16 @@ header {
     height: 50px;
     margin: 40px 0px;
 }
+
+
+/* main */
+
+.grey-text {
+    display: block;
+    color: grey;
+}
+
+#blue-text {
+    color: #98D0ED;
+    font-weight: 1000;
+}
